<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:background="@color/cardview_dark_background"
   android:accessibilityPaneTitle="@string/app_name"
    tools:context=".Cake">

    <androidx.cardview.widget.CardView
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:cardCornerRadius="43dp"
        android:layout_marginEnd="15dp"
        android:elevation="43dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="40dp"
        >
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/strawberry_red_velvet_cake_1"
            android:background="@color/black"
            android:scaleType="centerCrop"

            />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:cardCornerRadius="43dp"
        android:layout_marginEnd="15dp"
        android:elevation="43dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="400dp"
        >
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/sugar_free_birthday_cake_chocolate_1200"
            android:background="@color/black"
            android:scaleType="centerCrop"
            />
    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="250dp"
        android:text="@string/add"
        android:textSize="25sp"
        android:drawableLeft="@drawable/ic_baseline_shopping_cart_24"

        />
    <RatingBar
        android:id="@+id/rating_bar"
        android:backgroundTint="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleY="0.6"
        android:scaleX="0.6"
        android:numStars="5"
        android:progressTint="#ffff8800"
        android:rating="4.5"
        android:stepSize="0.5"
        android:layout_marginStart="1dp"
        android:layout_marginTop="200dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/red_velvet"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="33dp"
        android:layout_marginTop="100dp"
        />
    <TextView
        android:id="@+id/Price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_15_58"
        android:textSize="28sp"
      android:textStyle="normal"
        android:textColor="#5F939A"
        android:layout_marginStart="95dp"
        android:layout_marginTop="155dp"
        />
    <RatingBar
        android:id="@+id/rating_bar1"
        android:backgroundTint="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleY="0.6"
        android:scaleX="0.6"
        android:numStars="5"
        android:progressTint="#ffff8800"
        android:rating="4.5"
        android:stepSize="0.5"
        android:layout_marginStart="1dp"
        android:layout_marginTop="540dp"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chocolate"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="33dp"
        android:layout_marginTop="440dp"
        />
    <TextView
        android:id="@+id/Price1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_20"
        android:textSize="28sp"
        android:textStyle="normal"
        android:textColor="#5F939A"
        android:layout_marginStart="130dp"
        android:layout_marginTop="500dp"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order1"
        android:textSize="28sp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="580dp"
        android:drawableLeft="@drawable/ic_baseline_shopping_cart_24"
        />

</FrameLayout>