<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    tools:context=".Orderc">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="91dp"
        android:src="@drawable/sugar_free_birthday_cake_chocolate_1200"
        />
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_main_ingredient_of_the_chocolate_in_this_cake_is_cocoa_which_helps_our_brain_release_endorphins_or_the_feel_good_chemical_this_is_why_whenever_we_eat_this_cake_our_moods_lighten_and_we_feel_a_lot_better"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="1dp"
        android:layout_marginTop="360dp"
        android:padding="15dp"
        />
    <TextView
        android:id="@+id/Price1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_15_58"
        android:textSize="28sp"
        android:textStyle="normal"
        android:textColor="#5F939A"
        android:layout_marginStart="140dp"
        android:layout_marginTop="570dp"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:layout_marginStart="125dp"
        android:layout_marginTop="610dp"
        />
    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="sharing Recpie"
        android:layout_marginStart="230dp"
        android:layout_marginTop="610dp"
        />
</FrameLayout>